tests/baselines/reference/autolift3.errors.txt
tests/cases/compiler/autolift3.ts(26,3): error TS2339: Property 'foo' does not exist on type 'B'.


==== tests/cases/compiler/autolift3.ts (1 errors) ====
    class B {
    
        constructor() {
            function foo() {  }
    
            foo();
    
            var a = 0;
            var inner: any = (function() {
                var CScriptIO = (function() {
                    var fso = 0
    
                    return {
                        readFile: function(path: string): string {
                            return fso.toString();
                        }
                    }
                })();
                return inner;
            })();
        }
    }
    
    var b = new B();
    
    b.foo();
      ~~~
!!! error TS2339: Property 'foo' does not exist on type 'B'.
    
    
    
    